ajout de la page login

--- a/gcm/gcm-web/src/main/webapp/pages/create.xhtml
+++ b/gcm/gcm-web/src/main/webapp/pages/create.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
-  <title><ui:insert name="title">Create User Test</ui:insert></title>
+  <title><ui:insert name="title">Create User</ui:insert></title>
 </h:head>
 
 	<body>
@@ -44,7 +44,6 @@
 		  
 		  <p:commandButton value="Add User" update="messages" id="addUser" actionListener="#{userMB.addUser}" title = "add user"/> 
 
-		
 	     </h:form>		
 	</body>
 
