--- a/gcm/gcm-web/src/main/webapp/pages/create.xhtml
+++ b/gcm/gcm-web/src/main/webapp/pages/create.xhtml
@@ -42,7 +42,7 @@
 		 	 </h:panelGrid>
 		  </p:panel>
 		  
-		  <p:commandButton value="Add User" update="messages" id="addUser" actionListener="#{userMB.addUser}" title = "add user"/> 
+		  <p:commandButton value="Add User" update="messages" id="addUser" action="#{userMB.addUser}" title = "add user"/> 
 
 	     </h:form>		
 	</body>
