--- a/gcm/gcm-web/src/main/webapp/pages/error.xhtml
+++ b/gcm/gcm-web/src/main/webapp/pages/error.xhtml
@@ -1,13 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-	<ui:composition template="">
-	</ui:composition>
-	
-	<h5>
-	Error
-	</h5>
+<h:head>
+	<title><ui:insert name="title">List User Test</ui:insert></title>
+</h:head>
+
+<body>
+	<h5>Error</h5>
+</body>
+
+
 </html>
