--- a/gcm/gcm-web/src/main/webapp/pages/listUsers.xhtml
+++ b/gcm/gcm-web/src/main/webapp/pages/listUsers.xhtml
@@ -10,6 +10,56 @@
 <title><ui:insert name="title">List User Test</ui:insert></title>
 </h:head>
 <h:body>
+
+<h:form>  
+  
+    <p:growl id="messages"/>  
+  
+    <p:menubar>  
+        <p:submenu label="File" icon="ui-icon-document">  
+            <p:submenu label="New" icon="ui-icon-contact">  
+                <p:menuitem value="Project" url="#" />  
+                <p:menuitem value="Other" url="#" />  
+            </p:submenu>  
+            <p:menuitem value="Open" url="#" />  
+            <p:separator />  
+            <p:menuitem value="Quit" url="#" />  
+        </p:submenu>  
+  
+        <p:submenu label="Edit" icon="ui-icon-pencil">  
+            <p:menuitem value="Undo" url="#" icon="ui-icon-arrowreturnthick-1-w" />  
+            <p:menuitem value="Redo" url="#" icon="ui-icon-arrowreturnthick-1-e" />  
+        </p:submenu>  
+  
+        <p:submenu label="Help" icon="ui-icon-help">  
+            <p:menuitem value="Contents" url="#" />  
+            <p:submenu label="Search" icon="ui-icon-search">  
+                <p:submenu label="Text">  
+                    <p:menuitem value="Workspace" url="#" />  
+                </p:submenu>  
+                <p:menuitem value="File" url="#" />  
+            </p:submenu>  
+        </p:submenu>  
+  
+        <p:submenu label="Actions" icon="ui-icon-gear">  
+            <p:submenu label="Ajax" icon="ui-icon-refresh">  
+                <p:menuitem value="Save" actionListener="#{menuBean.save}" icon="ui-icon-disk" update="messages"/>  
+                <p:menuitem value="Update" actionListener="#{menuBean.update}" icon="ui-icon-arrowrefresh-1-w" update="messages"/>  
+            </p:submenu>  
+            <p:submenu label="Non-Ajax" icon="ui-icon-newwin">  
+                <p:menuitem value="Delete" actionListener="#{menuBean.delete}" icon="ui-icon-close" update="messages" ajax="false"/>  
+            </p:submenu>  
+        </p:submenu>  
+  
+        <p:menuitem value="Quit" url="http://www.primefaces.org" icon="ui-icon-close" />  
+  
+        <f:facet name="options">  
+            <p:inputText style="margin-right:10px"/>  
+            <p:commandButton value="Logout" icon="ui-icon-extlink" action="/pages/login.xhtml?faces-redirect=true" />  
+        </f:facet>  
+    </p:menubar>  
+  </h:form>
+  
 	<h:form>	
 			<p:dataTable var="user" value="#{userMB.listUsers}" >
 				<p:column headerText="firstName">
