--- a/gcm/gcm-web/src/main/webapp/pages/login.xhtml
+++ b/gcm/gcm-web/src/main/webapp/pages/login.xhtml
@@ -14,16 +14,12 @@
 <body>
 
 
-
 	<p:panel header="Authentication">
 
 
 		<h:form id="form">
 
-
-
-			<p:messages id = "messages" />
-
+		 	<p:growl id = "messagesLogin" showDetail="true" life="3000"/>
 
 			<h:panelGrid cellpadding="2" columns="2">
 
