--- a/gcm/gcm-web/src/main/webapp/pages/create.xhtml
+++ b/gcm/gcm-web/src/main/webapp/pages/create.xhtml
@@ -55,7 +55,7 @@
 			<f:facet name="options">
 				<p:inputText style="margin-right:10px" />
 				<p:commandButton value="Logout" icon="ui-icon-extlink"
-					action="/pages/login.xhtml?faces-redirect=true" />
+					action="#{userMB.logout}" />
 			</f:facet>
 		</p:menubar>
 	</h:form>
