--- a/gcm/gcm-web/src/main/webapp/pages/appointments.xhtml
+++ b/gcm/gcm-web/src/main/webapp/pages/appointments.xhtml
@@ -8,6 +8,7 @@
 
 <h:head>
 	<title><ui:insert name="title">Create User</ui:insert></title>
+	<script language="javascript" type="text/javascript" src="../js/primeFacesLocal.js"></script>
 </h:head>
 
 <h:body>
@@ -61,38 +62,6 @@
 		</p:dialog>
 	</h:form>
 
-	<script type="text/javascript">
-		PrimeFaces.locales['fr'] = {
-			closeText : 'Fermer',
-			prevText : 'Précédent',
-			nextText : 'Suivant',
-			monthNames : [ 'Janvier', 'Février', 'Mars', 'Avril', 'Mai',
-					'Juin', 'Juillet', 'Août', 'Septembre', 'Octobre',
-					'Novembre', 'Décembre' ],
-			monthNamesShort : [ 'Jan', 'Fév', 'Mar', 'Avr', 'Mai', 'Jun',
-					'Jul', 'Aoû', 'Sep', 'Oct', 'Nov', 'Déc' ],
-			dayNames : [ 'Dimanche', 'Lundi', 'Mardi', 'Mercredi', 'Jeudi',
-					'Vendredi', 'Samedi' ],
-			dayNamesShort : [ 'Dim', 'Lun', 'Mar', 'Mer', 'Jeu', 'Ven', 'Sam' ],
-			dayNamesMin : [ 'D', 'L', 'M', 'M', 'J', 'V', 'S' ],
-			weekHeader : 'Semaine',
-			firstDay : 1,
-			isRTL : false,
-			showMonthAfterYear : false,
-			yearSuffix : '',
-			timeOnlyTitle : 'Choisir l\'heure',
-			timeText : 'Heure',
-			hourText : 'Heures',
-			minuteText : 'Minutes',
-			secondText : 'Secondes',
-			currentText : 'Maintenant',
-			ampm : false,
-			month : 'Mois',
-			week : 'Semaine',
-			day : 'Jour',
-			allDayText : 'Toute la journée',
-		};
-	</script>
 </h:body>
 
 </html>
