--- a/gcm/gcm-web/src/main/webapp/pages/listUsers.xhtml
+++ b/gcm/gcm-web/src/main/webapp/pages/listUsers.xhtml
@@ -10,87 +10,21 @@
 	<title><ui:insert name="title">List Users</ui:insert></title>
 </h:head>
 <h:body>
+	<p:dataTable id="datatable" var="user" value="#{userMB.listUsers}"
+		emptyMessage="Aucun utilisateurs" rows="20" paginator="true"
+		paginatorPosition="bottom" >
 
-	<h:form>
+		<p:column sortBy="firstName" headerText="firstName">
+			<h:outputText value="#{user.firstName}" />
+		</p:column>
 
-		<p:growl id="messages" />
+		<p:column sortBy="lastName"	headerText="lastName">
+			<h:outputText value="#{user.lastName}" />
+		</p:column>
 
-
-		<p:layout fullPage="true">
-
-			<p:layoutUnit position="center">
-
-				<p:menubar>
-					<p:submenu label="File" icon="ui-icon-document">
-						<p:submenu label="New" icon="ui-icon-contact">
-							<p:menuitem value="Project" url="#" />
-							<p:menuitem value="Other" url="#" />
-						</p:submenu>
-						<p:menuitem value="Open" url="#" />
-						<p:separator />
-						<p:menuitem value="Quit" url="#" />
-					</p:submenu>
-
-					<p:submenu label="Edit" icon="ui-icon-pencil">
-						<p:menuitem value="Undo" url="#"
-							icon="ui-icon-arrowreturnthick-1-w" />
-						<p:menuitem value="Redo" url="#"
-							icon="ui-icon-arrowreturnthick-1-e" />
-					</p:submenu>
-
-					<p:submenu label="Help" icon="ui-icon-help">
-						<p:menuitem value="Contents" url="#" />
-						<p:submenu label="Search" icon="ui-icon-search">
-							<p:submenu label="Text">
-								<p:menuitem value="Workspace" url="#" />
-							</p:submenu>
-							<p:menuitem value="File" url="#" />
-						</p:submenu>
-					</p:submenu>
-
-					<p:submenu label="Actions" icon="ui-icon-gear">
-						<p:submenu label="Ajax" icon="ui-icon-refresh">
-							<p:menuitem value="Save" actionListener="#{menuBean.save}"
-								icon="ui-icon-disk" update="messages" />
-							<p:menuitem value="Update" actionListener="#{menuBean.update}"
-								icon="ui-icon-arrowrefresh-1-w" update="messages" />
-						</p:submenu>
-						<p:submenu label="Non-Ajax" icon="ui-icon-newwin">
-							<p:menuitem value="Delete" actionListener="#{menuBean.delete}"
-								icon="ui-icon-close" update="messages" ajax="false" />
-						</p:submenu>
-					</p:submenu>
-
-					<f:facet name="options">
-						<p:inputText style="margin-right:10px" />
-						<p:commandButton value="Logout" icon="ui-icon-extlink"
-							action="#{userMB.logout}" />
-					</f:facet>
-				</p:menubar>
-
-
-				<p:dataTable id = "datatable" var="user" value="#{userMB.listUsers}" emptyMessage="Aucun utilisateurs"
-					 rows="20" paginator="true"
-					paginatorPosition="bottom"  >
-					
-					<p:column sortBy="firstName"  headerText="firstName" >
-						<h:outputText value="#{user.firstName}" />
-					</p:column>
-
-					<p:column  headerText="lastName" >
-						<h:outputText value="#{user.lastName}" />
-					</p:column>
-
-					<p:column  headerText="login">
-						<h:outputText value="#{user.login}" />
-					</p:column>
-
-				</p:dataTable>
-
-			</p:layoutUnit>
-
-		</p:layout>
-	</h:form>
+		<p:column headerText="login" sortBy="login">
+			<h:outputText value="#{user.login}" />
+		</p:column>
+	</p:dataTable>
 </h:body>
-
 </html>
