--- a/gcm/gcm-web/src/main/webapp/pages/appointments.xhtml
+++ b/gcm/gcm-web/src/main/webapp/pages/appointments.xhtml
@@ -8,8 +8,6 @@
 
 <h:head>
 	<title><ui:insert name="title">Create User</ui:insert></title>
-	<script language="javascript" type="text/javascript"
-		src="../js/primeFacesLocal.js"></script>
 </h:head>
 
 <h:body>
@@ -21,7 +19,7 @@
 			widgetVar="myschedule" locale="fr">
 
 			<p:ajax event="dateSelect" listener="#{scheduleMB.onDateSelect}"
-				update="eventDetails" oncomplete="PF('eventDialog').show()" />
+				update="eventDetails" oncomplete="PF('eventDialog').show()" global="false"/>
 			<p:ajax event="eventSelect" listener="#{scheduleMB.onEventSelect}"
 				update="eventDetails" oncomplete="PF('eventDialog').show()" />
 			<p:ajax event="eventMove" listener="#{scheduleMB.onEventMove}"
@@ -69,50 +67,24 @@
 					<h:outputLabel for="firstName" value="Prénom: *" />
 					<p:inputText id="firstName" value="#{scheduleMB.patient.firstName}" />
 
-					<h:outputLabel for="number" value="Numero *" />
-					<p:inputText id="numbrt" value="#{scheduleMB.address.number}" />
-
 					<h:outputLabel for="lastName" value="Nom: *" />
 					<p:inputText id="lastName" value="#{scheduleMB.patient.lastName}" />
 
-					<h:outputLabel for="street" value="Rue *" />
-					<p:inputText id="street" value="#{scheduleMB.address.street}" />
 
 					<h:outputLabel for="maidenName" value="Nom de jeune fille: " />
 					<p:inputText id="maidenName"
 						value="#{scheduleMB.patient.maidenName}" />
 
-					<h:outputLabel for="zipCode" value="Code postal: *" />
-					<p:selectOneMenu value="#{scheduleMB.address.zipCode}">
-						<f:selectItem itemLabel="Select One" itemValue="" />
-						<f:selectItem itemLabel="Option 1" itemValue="1" />
-						<f:selectItem itemLabel="Option 2" itemValue="2" />
-						<f:selectItem itemLabel="Option 3" itemValue="3" />
-					</p:selectOneMenu>
-
-					<h:outputLabel for="socielNumber"
+					<h:outputLabel for="socialNumber"
 						value="Numero de securité sociale: *" />
-					<p:inputText id="socielNumber"
+					<p:inputText id="socialNumber"
 						value="#{scheduleMB.patient.socialNumber}" />
-
-					<h:outputLabel for="city" value="Ville: *" />
-					<p:selectOneMenu value="#{scheduleMB.address.city}">
-						<f:selectItem itemLabel="Select One" itemValue="" />
-						<f:selectItem itemLabel="Option 1" itemValue="1" />
-						<f:selectItem itemLabel="Option 2" itemValue="2" />
-						<f:selectItem itemLabel="Option 3" itemValue="3" />
-					</p:selectOneMenu>
 
 					<h:outputLabel for="phoneNumber" value="Numero de téléphone: *" />
 					<p:inputMask id="phoneNumber"
 						value="#{scheduleMB.patient.phoneNumber}"
 						mask="(9999) 99-99-99-99-99" />
 
-					<h:outputLabel for="country" value="Pays: *" />
-					<p:selectOneMenu value="#{scheduleMB.address.country}">
-						<f:selectItem itemLabel="Select One" itemValue="" />
-						<f:selectItems value="#{scheduleMB.findAllAddresses}" var="address" itemLabel="#{address.country}" itemValue="#{address.addressID}"/>
-					</p:selectOneMenu>
 
 					<h:outputLabel for="birthDay" value="Date de naissance: *" />
 					<p:inputMask id="birthDay" value="#{scheduleMB.patient.birthDay}"
@@ -120,8 +92,44 @@
 						<f:convertDateTime pattern="dd/MM/yyyy" />
 					</p:inputMask>
 
-					<h:outputLabel for="sex" value="Sex: *" />
-					<p:inputText id="sex" value="#{scheduleMB.patient.sex}" />
+					<h:outputLabel for="sex" value="Sexe: *" />
+					<p:selectOneMenu id="sex" value="#{scheduleMB.patient.sex}">
+						<f:selectItem itemLabel="Choisir" itemValue="" />
+						<f:selectItem itemLabel="Homme" itemValue="Homme" />
+						<f:selectItem itemLabel="Femme" itemValue="Femme" />
+					</p:selectOneMenu>
+
+
+					<h:outputLabel for="number" value="Numero *" />
+					<p:inputText id="numbrt" value="#{scheduleMB.address.number}" />
+
+
+					<h:outputLabel for="street" value="Rue *" />
+					<p:inputText id="street" value="#{scheduleMB.address.street}" />
+
+					<h:outputLabel for="zipCode" value="Code postal: *" />
+					<p:selectOneMenu value="#{scheduleMB.address.zipCode}">
+						<f:selectItem itemLabel="Choisir" itemValue="" />
+						<f:selectItem itemLabel="94400" itemValue="94400" />
+						<f:selectItem itemLabel="23200" itemValue="23200" />
+						<f:selectItem itemLabel="75018" itemValue="75018" />
+					</p:selectOneMenu>
+
+					<h:outputLabel for="city" value="Ville: *" />
+					<p:selectOneMenu value="#{scheduleMB.address.city}">
+						<f:selectItem itemLabel="Choisir" itemValue="" />
+						<f:selectItem itemLabel="Option 1" itemValue="1" />
+						<f:selectItem itemLabel="Option 2" itemValue="2" />
+						<f:selectItem itemLabel="Option 3" itemValue="3" />
+					</p:selectOneMenu>
+
+					<h:outputLabel for="country" value="Pays: *" />
+					<p:selectOneMenu value="#{scheduleMB.address.country}">
+						<f:selectItem itemLabel="Choisir" itemValue="" />
+						<f:selectItem itemLabel="Option 1" itemValue="1" />
+						<f:selectItem itemLabel="Option 2" itemValue="2" />
+						<f:selectItem itemLabel="Option 3" itemValue="3" />
+					</p:selectOneMenu>
 
 				</h:panelGrid>
 
