--- a/gcm/gcm-web/src/main/webapp/pages/main.xhtml
+++ b/gcm/gcm-web/src/main/webapp/pages/main.xhtml
@@ -8,84 +8,103 @@
 
 
 <h:head>
-	<title><ui:insert name="title">Menu</ui:insert></title>
+ 	<link href="../css/main.css" rel="stylesheet" type="text/css" />
+	<script language="javascript" type="text/javascript"
+		src="../js/primeFacesLocal.js"></script>
+	<title><ui:insert name="title">GCM</ui:insert></title>
 </h:head>
 
 
 <h:body>
 
-	<h:form>
-		<p:menubar>
-			<p:submenu label="File" icon="ui-icon-document">
-				<p:submenu label="New" icon="ui-icon-contact">
-					<p:menuitem value="Project" url="#" />
-					<p:menuitem value="Other" url="#" />
-				</p:submenu>
-				<p:menuitem value="Open" url="#" />
-				<p:separator />
-				<p:menuitem value="Quit" url="#" />
-			</p:submenu>
 
-			<p:submenu label="Edit" icon="ui-icon-pencil">
-				<p:menuitem value="Undo" url="#" icon="ui-icon-arrowreturnthick-1-w" />
-				<p:menuitem value="Redo" url="#" icon="ui-icon-arrowreturnthick-1-e" />
-			</p:submenu>
+	<p:ajaxStatus onstart="dlgLoading.show();"
+		onsuccess="dlgLoading.hide();" />
 
-			<p:submenu label="Help" icon="ui-icon-help">
-				<p:menuitem value="Contents" url="#" />
-				<p:submenu label="Search" icon="ui-icon-search">
-					<p:submenu label="Text">
-						<p:menuitem value="Workspace" url="#" />
+
+	<p:dialog header="Processing..." widgetVar="dlgLoading"
+		showEffect="fade" hideEffect="fade" draggable="true" closable="false"
+		modal="true">
+		<p:graphicImage value="/images/loading.gif" />
+	</p:dialog>
+
+
+	<div>
+
+		<h:form>
+			<p:menubar>
+				<p:submenu label="File" icon="ui-icon-document">
+					<p:submenu label="New" icon="ui-icon-contact">
+						<p:menuitem value="Project" url="#" />
+						<p:menuitem value="Other" url="#" />
 					</p:submenu>
-					<p:menuitem value="File" url="#" />
+					<p:menuitem value="Open" url="#" />
+					<p:separator />
+					<p:menuitem value="Quit" url="#" />
 				</p:submenu>
-			</p:submenu>
 
-			<p:submenu label="Actions" icon="ui-icon-gear">
-				<p:submenu label="Ajax" icon="ui-icon-refresh">
-					<p:menuitem value="Save" actionListener="#{menuBean.save}"
-						icon="ui-icon-disk" />
-					<p:menuitem value="Update" actionListener="#{menuBean.update}"
-						icon="ui-icon-arrowrefresh-1-w" />
+				<p:submenu label="Edit" icon="ui-icon-pencil">
+					<p:menuitem value="Undo" url="#"
+						icon="ui-icon-arrowreturnthick-1-w" />
+					<p:menuitem value="Redo" url="#"
+						icon="ui-icon-arrowreturnthick-1-e" />
 				</p:submenu>
-				<p:submenu label="Non-Ajax" icon="ui-icon-newwin">
-					<p:menuitem value="Delete" actionListener="#{menuBean.delete}"
-						icon="ui-icon-close" ajax="false" />
+
+				<p:submenu label="Help" icon="ui-icon-help">
+					<p:menuitem value="Contents" url="#" />
+					<p:submenu label="Search" icon="ui-icon-search">
+						<p:submenu label="Text">
+							<p:menuitem value="Workspace" url="#" />
+						</p:submenu>
+						<p:menuitem value="File" url="#" />
+					</p:submenu>
 				</p:submenu>
-			</p:submenu>
 
-			<f:facet name="options">
-				<p:inputText style="margin-right:10px" />
-				<p:commandButton value="Logout" icon="ui-icon-extlink"
-					action="#{mainActionsMB.logout}" />
-			</f:facet>
-		</p:menubar>
+				<p:submenu label="Actions" icon="ui-icon-gear">
+					<p:submenu label="Ajax" icon="ui-icon-refresh">
+						<p:menuitem value="Save" actionListener="#{menuBean.save}"
+							icon="ui-icon-disk" />
+						<p:menuitem value="Update" actionListener="#{menuBean.update}"
+							icon="ui-icon-arrowrefresh-1-w" />
+					</p:submenu>
+					<p:submenu label="Non-Ajax" icon="ui-icon-newwin">
+						<p:menuitem value="Delete" actionListener="#{menuBean.delete}"
+							icon="ui-icon-close" ajax="false" />
+					</p:submenu>
+				</p:submenu>
 
-	</h:form>
-	
-		<p:tabView id="mainTabView" dynamic="false" cache="true" scrollable="true" >
+				<f:facet name="options">
+					<p:inputText style="margin-right:10px" />
+					<p:commandButton value="Déconnexion" icon="ui-icon-power"
+						action="#{mainActionsMB.logout}" ajax="false" />
+				</f:facet>
+			</p:menubar>
+		</h:form>
 
+	</div>
+
+	<div>
+		<p:tabView id="mainTabView" dynamic="false" cache="true"
+			scrollable="true">
 			<p:tab id="tab1" title="Rendez-Vous">
-
 				<f:subview id="appointSubView">
 					<ui:include src="appointments.xhtml" />
 				</f:subview>
 			</p:tab>
-
 			<p:tab id="tab2" title="Administration">
-
 				<f:subview id="createSubView">
 					<ui:include src="create.xhtml" />
 				</f:subview>
 			</p:tab>
-
-			<p:tab id="tab3" title="Liste des utilisateurs">
-
-				<f:subview id="listUsersSubView">
-					<ui:include src="listUsers.xhtml" />
+			<p:tab id="tab3" title="Consultations">
+				<f:subview id="consultationsSubView">
+					<ui:include src="consultations.xhtml" />
 				</f:subview>
 			</p:tab>
-
 		</p:tabView>
+	</div>
+
+	<div class="footer">Copy right 2014</div>
+
 </h:body>
 </html>
